# fastapi-graphql-grpc-bff-starter-project

./: README.md
backend/: .env.example  .gitignore  main.py  pyproject.toml  start.sh  stop.sh
backend/app/graphql/: context_factory.py  schema.py
backend/app/graphql/product/: mutations.py  queries.py  types.py
backend/app/graphql/user/: mutations.py  queries.py  types.py
backend/app/grpc/clients/: base_client.py  grpc_client.py  product_service_client.py  user_service_client.py
backend/app/grpc/config/: grpc_config.py
backend/app/grpc/servers/: graceful_server.py  interceptors.py  product_server.py  user_server.py
backend/app/grpc/servers/user/: .env.example  README.md  alembic.ini  backup.sh  start.sh  user_server.py
backend/app/grpc/servers/user/alembic_user_service/: env.py
backend/app/grpc/servers/user/alembic_user_service/versions/: 2e6b7d9bf682_remove_unused_index.py  56edcc5dc58d_init_user_model.py  a8bcf0842c22_description_of_changes.py
backend/app/grpc/servers/user/database/: base.py  config.py  connection.py  models.py
backend/app/models/: product.py  user.py
backend/app/restful/: routes.py  user.py
backend/protos/: product.proto  user.proto
backend/scripts/: generate_protos.py
